fixed column gap for main page

--- a/book-review.css
+++ b/book-review.css
@@ -38,6 +38,7 @@ main {
 
     display: grid;
     grid-template-columns: auto 1fr;
+    column-gap: 24px;
 }
 
 .book-cover {
